Add reusable widget exercise

--- a/class-and-widget/class.html
+++ b/class-and-widget/class.html
@@ -13,7 +13,7 @@
     };
   </script>
   <script src="https://js.arcgis.com/3.27/"></script>
-  <script type="text/javascript" charset="utf-8" src="index.js"></script>
+  <script type="text/javascript" charset="utf-8" src="class.js"></script>
 </head>
 <body>
 <div id="search"></div>
